Add an ErrorReporter to expose all profile conversion and validation issues, rather than just the first one encountered. This also exposes validation issues via an FHIR OperationOutcome resource so they can be easily reported to external callers.
PiperOrigin-RevId: 361213811

--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -47,10 +47,13 @@ cc_library(
     hdrs = ["profiles.h"],
     strip_include_prefix = "//cc/",
     deps = [
+        ":operation_error_reporter",
         ":primitive_handler",
+        "//cc/google/fhir:error_reporter",
         "//cc/google/fhir:profiles_lib",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
+        "//proto/google/fhir/proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_protobuf//:protobuf",
@@ -193,11 +196,29 @@ cc_library(
     hdrs = ["resource_validation.h"],
     strip_include_prefix = "//cc/",
     deps = [
+        ":operation_error_reporter",
         ":primitive_handler",
+        "//cc/google/fhir:error_reporter",
         "//cc/google/fhir:resource_validation",
         "//cc/google/fhir/fhir_path:stu3_fhir_path_validation",
+        "//proto/google/fhir/proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
         "@com_google_protobuf//:protobuf",
+    ],
+)
+
+cc_library(
+    name = "operation_error_reporter",
+    srcs = ["operation_error_reporter.cc"],
+    hdrs = ["operation_error_reporter.h"],
+    strip_include_prefix = "//cc/",
+    deps = [
+        "//cc/google/fhir:error_reporter",
+        "//proto/google/fhir/proto/stu3:codes_cc_proto",
+        "//proto/google/fhir/proto/stu3:datatypes_cc_proto",
+        "//proto/google/fhir/proto/stu3:resources_cc_proto",
+        "@com_google_absl//absl/status",
     ],
 )
 
@@ -210,6 +231,7 @@ cc_test(
     deps = [
         ":resource_validation",
         "//cc/google/fhir:test_helper",
+        "//cc/google/fhir/testutil:proto_matchers",
         "//proto/google/fhir/proto/stu3:datatypes_cc_proto",
         "//proto/google/fhir/proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/status",
