--- a/bazel/requirements.txt
+++ b/bazel/requirements.txt
@@ -1,10 +1,5 @@
-absl-py==0.10.0
-backports.zoneinfo==0.2.1
-certifi==2020.6.20
-chardet==3.0.4
-idna==2.10
-protobuf==3.13.0
-python-dateutil==2.8.1
-requests==2.24.0
-six==1.15.0
-urllib3==1.25.10
+absl-py~=0.10.0
+backports.zoneinfo~=0.2.1
+protobuf~=3.13.0
+python-dateutil~=2.8.1
+requests~=2.24.0
