--- a/py/requirements.txt
+++ b/py/requirements.txt
@@ -1,5 +1,4 @@
-absl-py==0.10.0
-backports.zoneinfo==0.2.1
-protobuf==3.13.0
-python-dateutil==2.8.1
-six==1.15.0
+absl-py~=0.10.0
+backports.zoneinfo~=0.2.1
+protobuf~=3.13.0
+python-dateutil~=2.8.1
