--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -74,6 +74,7 @@ cc_library(
         "//cc/google/fhir:annotations",
         "//cc/google/fhir:primitive_handler",
         "//cc/google/fhir:proto_util",
+        "//cc/google/fhir:util",
         "//cc/google/fhir/status:statusor",
         "//proto/google/fhir/proto:annotations_cc_proto",
         "@com_google_absl//absl/base:core_headers",
@@ -228,6 +229,7 @@ cc_test(
         ":fhir_path_validation",
         ":r4_fhir_path_validation",
         ":stu3_fhir_path_validation",
+        "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//cc/google/fhir/testutil:fhir_test_env",
         "//proto/google/fhir/proto/r4:uscore_cc_proto",
@@ -246,6 +248,7 @@ cc_test(
         "//proto/google/fhir/proto/stu3:uscore_cc_proto",
         "//proto/google/fhir/proto/stu3:uscore_codes_cc_proto",
         "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
         "@com_google_googletest//:gtest_main",
         "@com_google_protobuf//:protobuf",
     ],
