--- a/proto/google/fhir/proto/r4/core/resources/BUILD
+++ b/proto/google/fhir/proto/r4/core/resources/BUILD
@@ -48,6 +48,7 @@ PROTO_DEPS = [
     ":diagnostic_report_proto",
     ":document_manifest_proto",
     ":document_reference_proto",
+    ":domain_resource_proto",
     ":effect_evidence_synthesis_proto",
     ":encounter_proto",
     ":endpoint_proto",
@@ -126,6 +127,7 @@ PROTO_DEPS = [
     ":research_element_definition_proto",
     ":research_study_proto",
     ":research_subject_proto",
+    ":resource_proto",
     ":risk_assessment_proto",
     ":risk_evidence_synthesis_proto",
     ":schedule_proto",
