Fixes a bug in json_parser.cc where two processes attempting to write to a memos object at the same time would cause one to segfault.
PiperOrigin-RevId: 367235594

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -327,6 +327,7 @@ cc_library(
         "//cc/google/fhir/status:statusor",
         "//cc/google/fhir/stu3:profiles",
         "//proto/google/fhir/proto:annotations_cc_proto",
+        "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
