Modifies ProtoGeneratorMain's handling of FileSplittingBehavior to *ALWAYS* output only a single .zip file containing all resources, codes, and extensions, regardless of how those are subdivided within the zip.
This allows bazel to be totally ignorant of what actual .proto files will be generated, and allows greater flexibility in the generator itself for choosing what files are appropriate.  As a result, the bazel flag "separate_extensions" that duplicated information from PackageInfo is removed, along with some flags to ProtoGeneratorMain - previously the main point of these flags was to make sure bazel knew what files to expect.

This also has the side effect of generating the new src files with 664 permissions bitmask instead of 775.  This is effectively a bug fix - there's no reason these files should have executable bits.

PiperOrigin-RevId: 367738377

--- a/javatests/com/google/fhir/protogen/BUILD
+++ b/javatests/com/google/fhir/protogen/BUILD
@@ -7,8 +7,8 @@ java_test(
     data = [
         "//proto/google/fhir/proto/r4/core:testdata",
         "//proto/google/fhir/proto/r4/core/resources:testdata",
+        "//spec:fhir_r4_filegroup",
         "//spec:fhir_r4_package.zip",
-        "//spec:fhir_r4_package_filegroup",
         "//testdata/r4:descriptors",
     ],
     test_class = "com.google.fhir.protogen.ProtoFilePrinterTest",
@@ -37,8 +37,8 @@ java_test(
         "//proto/google/fhir/proto/r4/core:testdata",
         "//proto/google/fhir/proto/r4/core/profiles:proto_files",
         "//proto/google/fhir/proto/r4/core/resources:testdata",
+        "//spec:fhir_r4_filegroup",
         "//spec:fhir_r4_package.zip",
-        "//spec:fhir_r4_package_filegroup",
         "//testdata/r4:descriptors",
     ],
     test_class = "com.google.fhir.protogen.ProtoGeneratorTest",
@@ -71,8 +71,8 @@ java_test(
     testonly = 1,
     srcs = ["ProfileGeneratorTest.java"],
     data = [
-        "//spec:fhir_r4_package_filegroup",
-        "//spec:fhir_stu3_package_filegroup",
+        "//spec:fhir_r4_filegroup",
+        "//spec:fhir_stu3_filegroup",
         "//testdata/r4:profiles",
         "//testdata/stu3:profiles",
     ],
