Fixes bug where bundle & contained resources protos would use the generated target location rather than the ultimate location in source for proto imports, resulting in proto imports from genrules pointing to bazel-genfiles.
Eliminates import lines from proto file comparison, since they can be pruned by tooling, and are guaranteed to be sufficient by compilation tests.

Add Split-Resources variant of r4 test profile to guarantee behavior and prevent regression.

PiperOrigin-RevId: 368144071

--- a/testdata/r4/profiles/BUILD
+++ b/testdata/r4/profiles/BUILD
@@ -68,3 +68,13 @@ filegroup(
         "*.json",
     ]),
 )
+
+# Export config files for use in "split" version of test profile.
+exports_files(
+    [
+        "test_extensions.prototxt",
+        "test_profiles.prototxt",
+        "test_terminologies.prototxt",
+    ],
+    visibility = ["//testdata/r4/profiles:__subpackages__"],
+)
