FHIRPath: Better handle codes that are represented as enumeration in FHIR protos.
PiperOrigin-RevId: 368690656

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -42,6 +42,8 @@ cc_library(
         ":fhir_path_types",
         ":utils",
         "//cc/google/fhir:annotations",
+        "//cc/google/fhir:codes",
+        "//cc/google/fhir:fhir_types",
         "//cc/google/fhir:primitive_handler",
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir:util",
@@ -150,6 +152,7 @@ cc_library(
     visibility = [":__pkg__"],
     deps = [
         "//cc/google/fhir:annotations",
+        "//cc/google/fhir:fhir_types",
         "//cc/google/fhir/status:statusor",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/status:statusor",
@@ -278,6 +281,7 @@ cc_test(
         "//cc/google/fhir:util",
         "//proto/google/fhir/proto/r4/core:datatypes_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
+        "//proto/google/fhir/proto/stu3:codes_cc_proto",
         "//proto/google/fhir/proto/stu3:datatypes_cc_proto",
         "//proto/google/fhir/proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/status:statusor",
