Add support for Python 3.9.x interpreters.
Add additional tooling around `build_distribution.sh` to test all supported major/minor interpreters prior to staging the release artifacts.

Closes #28.

PiperOrigin-RevId: 370141515

--- a/py/distribution/Dockerfile
+++ b/py/distribution/Dockerfile
@@ -16,7 +16,7 @@ FROM python:3.8.6-buster
 
 # Copy repository contents and setup working directory
 COPY . fhir
-WORKDIR /fhir/py
+WORKDIR fhir/py
 
 # Establish host <=> container volume for release artifacts
 RUN mkdir -p /tmp/google/fhir/release
