--- a/testdata/r4/profiles/split/BUILD
+++ b/testdata/r4/profiles/split/BUILD
@@ -1,4 +1,5 @@
 load("//bazel:protogen.bzl", "gen_fhir_definitions_and_protos")
+load("//bazel:proto.bzl", "fhir_proto_library")
 
 licenses(["notice"])
 
@@ -23,13 +24,13 @@ gen_fhir_definitions_and_protos(
     ],
 )
 
-proto_library(
-    name = "all_proto",
+fhir_proto_library(
     srcs = glob(["*.proto"]),
-    deps = [
+    proto_deps = [
         "@com_google_protobuf//:any_proto",
         "//proto/google/fhir/proto:annotations_proto",
         "//proto/google/fhir/proto/r4/core:codes_proto",
         "//proto/google/fhir/proto/r4/core:datatypes_proto",
     ],
+    proto_library_prefix = "all",
 )
