Return UnmarshalError for resources with multiple values for choice[x] fields.
PiperOrigin-RevId: 370688798

--- a/go/jsonformat/BUILD
+++ b/go/jsonformat/BUILD
@@ -67,6 +67,9 @@ go_test(
         "marshaller_test.go",
         "unmarshaller_test.go",
     ],
+    data = [
+        "//testdata/jsonformat",
+    ],
     embed = [":jsonformat"],
     deps = [
         "//go/jsonformat/internal/jsonpbhelper",
@@ -85,6 +88,7 @@ go_test(
         "//proto/google/fhir/proto/stu3:resources_go_proto",
         "@com_github_google_go_cmp//cmp:go_default_library",
         "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
+        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
         "@org_golang_google_protobuf//proto:go_default_library",
         "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
         "@org_golang_google_protobuf//testing/protocmp:go_default_library",
