--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -88,6 +88,7 @@ cc_library(
         "//cc/google/fhir/status:statusor",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/types:optional",
         "@com_google_protobuf//:protobuf",
         "@com_googlesource_code_re2//:re2",
     ],
