--- a/cc/google/fhir/testutil/BUILD
+++ b/cc/google/fhir/testutil/BUILD
@@ -76,11 +76,10 @@ cc_test(
         ":generator",
         ":proto_matchers",
         "//cc/google/fhir:proto_util",
-        "//cc/google/fhir:test_helper",
         "//cc/google/fhir/r4:primitive_handler",
-        "//proto/google/fhir/proto/r4/core:datatypes_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:observation_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:patient_cc_proto",
+        "//proto/google/fhir/proto/r4/core/resources:plan_definition_cc_proto",
         "@com_google_absl//absl/time",
         "@com_google_googletest//:gtest_main",
         "@com_google_protobuf//:protobuf",
