Parameterize json primitive format tests on version types (like STU3, R4) and datatypes.
Only supports R4 right now.

PiperOrigin-RevId: 374505734

--- a/py/google/fhir/json_format/BUILD
+++ b/py/google/fhir/json_format/BUILD
@@ -58,18 +58,18 @@ py_test(
     legacy_create_init = 0,
     python_version = "PY3",
     deps = [
-        "@com_google_protobuf//:protobuf_python",
         "//py",
         "//proto/google/fhir/proto/r4:primitive_test_suite_py_pb2",
         "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
-        "//py/google/fhir/testing:protobuf_compare",
-        "//py/google/fhir/testing:testdata_utils",
-        "//py/google/fhir/utils:proto_utils",
-        "//py/google/fhir/r4:json_format",
-        "//py/google/fhir/r4:primitive_handler",
         "//py/google/fhir:extensions",
         "//py/google/fhir:fhir_errors",
-        requirement("absl-py"),
-        requirement("six"),
+        "//py/google/fhir/r4:json_format",
+        "//py/google/fhir/testing:protobuf_compare",
+        "//py/google/fhir/testing:testdata_utils",
+        "//py/google/fhir/utils:annotation_utils",
+        "//py/google/fhir/utils:fhir_types",
+        "//py/google/fhir/utils:path_utils",
+        "//py/google/fhir/utils:proto_utils",
+        "@com_google_protobuf//:protobuf_python",
     ],
 )
