Adds java utility for retagging newly generated messages based on a reference version of the message.  This will be wired into the ProtoGenerator to guarantee stable tag numbers
PiperOrigin-RevId: 383467749

--- a/java/com/google/fhir/protogen/BUILD
+++ b/java/com/google/fhir/protogen/BUILD
@@ -126,3 +126,12 @@ java_binary(
         "@maven//:com_google_guava_guava",
     ],
 )
+
+java_library(
+    name = "field_retagger",
+    srcs = ["FieldRetagger.java"],
+    deps = [
+        "//proto/google/fhir/proto:protogenerator_annotations_java_proto",
+        "@com_google_protobuf//:protobuf_java",
+    ],
+)
