Corrects primitive extension field-mapping when parsing nested choice types.
Additionally, adds Python support for skipping over `fhir_comments` field parsing,
which is not supported by FHIRProto, and adds additional test coverage across all
offerings against `CodeSystem` resources.

PiperOrigin-RevId: 387708940

--- a/javatests/com/google/fhir/r4/BUILD
+++ b/javatests/com/google/fhir/r4/BUILD
@@ -37,6 +37,7 @@ java_test(
         "//proto/google/fhir/proto/r4/core/resources:claim_java_proto",
         "//proto/google/fhir/proto/r4/core/resources:claim_response_java_proto",
         "//proto/google/fhir/proto/r4/core/resources:clinical_impression_java_proto",
+        "//proto/google/fhir/proto/r4/core/resources:code_system_java_proto",
         "//proto/google/fhir/proto/r4/core/resources:communication_java_proto",
         "//proto/google/fhir/proto/r4/core/resources:communication_request_java_proto",
         "//proto/google/fhir/proto/r4/core/resources:compartment_definition_java_proto",
