Port `FhirPackage` from Java to Python for abstracting over FHIR definitions.
PiperOrigin-RevId: 387719906

--- a/py/google/fhir/utils/BUILD
+++ b/py/google/fhir/utils/BUILD
@@ -75,7 +75,31 @@ py_library(
     deps = [
         ":fhir_types",
         ":path_utils",
+        ":proto_utils",
         "//py",
+        "@com_google_protobuf//:protobuf_python",
+    ],
+)
+
+py_library(
+    name = "fhir_package",
+    srcs = [
+        "__init__.py",
+        "fhir_package.py",
+    ],
+    srcs_version = "PY3",
+    deps = [
+        ":proto_utils",
+        ":resource_utils",
+        "//py",
+        "//proto/google/fhir/proto:annotations_py_pb2",
+        "//proto/google/fhir/proto:profile_config_py_pb2",
+        "//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_py_pb2",
+        "//proto/google/fhir/proto/r4/core/resources:code_system_py_pb2",
+        "//proto/google/fhir/proto/r4/core/resources:search_parameter_py_pb2",
+        "//proto/google/fhir/proto/r4/core/resources:structure_definition_py_pb2",
+        "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
+        "//py/google/fhir/r4:json_format",
         "@com_google_protobuf//:protobuf_python",
     ],
 )
@@ -174,6 +198,27 @@ py_test(
         "//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:structure_definition_py_pb2",
         "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
+        requirement("absl-py"),
+        requirement("six"),
+    ],
+)
+
+py_test(
+    name = "fhir_package_test",
+    size = "large",
+    srcs = [
+        "fhir_package_test.py",
+    ],
+    data = [
+        "//spec:fhir_r4_package.zip",
+    ],
+    legacy_create_init = 0,
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":fhir_package",
+        "//py",
+        "//proto/google/fhir/proto:profile_config_py_pb2",
         requirement("absl-py"),
         requirement("six"),
     ],
