Export `FhirPath.g4` grammar for shared usage amongst other targets.
PiperOrigin-RevId: 391637674

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -4,6 +4,8 @@ licenses(["notice"])
 
 package(default_visibility = ["//visibility:public"])
 
+exports_files(["FhirPath.g4"])
+
 antlr4_cc_lexer(
     name = "fhir_path_lexer",
     src = "FhirPath.g4",
