--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -391,15 +391,13 @@ cc_library(
 
 cc_library(
     name = "operation_error_reporter",
-    srcs = ["operation_error_reporter.cc"],
     hdrs = ["operation_error_reporter.h"],
     strip_include_prefix = "//cc/",
     deps = [
-        "//cc/google/fhir:error_reporter",
+        "//cc/google/fhir:operation_error_reporter",
         "//proto/google/fhir/proto/r4/core:codes_cc_proto",
         "//proto/google/fhir/proto/r4/core:datatypes_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:operation_outcome_cc_proto",
-        "@com_google_absl//absl/status",
     ],
 )
 
