Update Validate API to use ValidationOutcome proto.
PiperOrigin-RevId: 398827116

--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -379,9 +379,16 @@ cc_library(
     deps = [
         ":operation_error_reporter",
         ":primitive_handler",
+        ":profiles",
         "//cc/google/fhir:error_reporter",
+        "//cc/google/fhir:references",
         "//cc/google/fhir:resource_validation",
+        "//cc/google/fhir:util",
         "//cc/google/fhir/fhir_path:r4_fhir_path_validation",
+        "//cc/google/fhir/status:statusor",
+        "//cc/google/fhir/stu3:operation_error_reporter",
+        "//proto/google/fhir/proto/r4:fhirproto_cc_proto",
+        "//proto/google/fhir/proto/r4/core:datatypes_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:operation_outcome_cc_proto",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
@@ -409,8 +416,11 @@ cc_test(
     ],
     deps = [
         ":resource_validation",
+        "//cc/google/fhir:references",
         "//cc/google/fhir:test_helper",
+        "//cc/google/fhir/status:statusor",
         "//cc/google/fhir/testutil:proto_matchers",
+        "//proto/google/fhir/proto/r4:fhirproto_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:encounter_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:observation_cc_proto",
