Update FHIRpath CompiledExpression::Compile() to take optional additional parameter with type ValueSetRepository, hence enable support for memberOf() function. The implementation of ValueSetRepository will have to be supplied by the caller, otherwise calling memberOf() results in a FailedPrecondition error.
PiperOrigin-RevId: 404277550

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -543,3 +543,13 @@ cc_library(
         "@com_google_absl//absl/status",
     ],
 )
+
+cc_library(
+    name = "value_set_repository",
+    hdrs = ["value_set_repository.h"],
+    strip_include_prefix = "//cc/",
+    deps = [
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/types:optional",
+    ],
+)
