--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -49,6 +49,7 @@ cc_library(
         "//cc/google/fhir:primitive_handler",
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir:util",
+        "//cc/google/fhir:value_set_repository",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto/google/fhir/proto/r4/core:datatypes_cc_proto",
