Fixes bug where GetReferenceProtoToResource would try to find a reference field using a profiled proto name, rather than the core fhir type.
PiperOrigin-RevId: 405742799

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -83,6 +83,7 @@ cc_library(
     hdrs = ["references.h"],
     strip_include_prefix = "//cc/",
     deps = [
+        ":core_resource_registry",
         ":type_macros",
         ":util",
         "//cc/google/fhir/status:statusor",
