Adds Load API to FhirPackage to allow sideloading package info in addition to a package zip. This will make it easier to load FHIR IGs that were produced externally.
PiperOrigin-RevId: 407395391

--- a/javatests/com/google/fhir/protogen/BUILD
+++ b/javatests/com/google/fhir/protogen/BUILD
@@ -101,6 +101,7 @@ java_test(
     deps = [
         "//java/com/google/fhir/common:exceptions",
         "//java/com/google/fhir/protogen",
+        "//proto/google/fhir/proto:annotations_java_proto",
         "//proto/google/fhir/proto:profile_config_java_proto",
         "@maven//:com_google_guava_guava_testlib",
         "@maven//:com_google_truth_truth",
