Generalizes ValueSetRepository to a more generic Terminology Resolver that can handle code systems and valuesets from multiple different IGs.
Changes implementation and test usages of memberOf to use ValueSet url rather than id, to match spec: https://www.hl7.org/fhir/fhirpath.html

PiperOrigin-RevId: 407409349

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -49,10 +49,11 @@ cc_library(
         "//cc/google/fhir:primitive_handler",
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir:util",
-        "//cc/google/fhir:value_set_repository",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
+        "//cc/google/fhir/terminology:terminology_resolver",
         "//proto/google/fhir/proto/r4/core:datatypes_cc_proto",
+        "@com_google_absl//absl/container:flat_hash_set",
         "@com_google_absl//absl/container:node_hash_set",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/status",
@@ -198,6 +199,7 @@ cc_test(
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//cc/google/fhir/stu3:primitive_handler",
+        "//cc/google/fhir/terminology:terminology_resolver",
         "//cc/google/fhir/testutil:fhir_test_env",
         "//cc/google/fhir/testutil:proto_matchers",
         "//proto/google/fhir/proto/r4/core:codes_cc_proto",
